fix: Fix the misalignment between the menu button and the main heading and intro

--- a/styles/layout/header.css
+++ b/styles/layout/header.css
@@ -61,7 +61,7 @@
 .header__headline {
     color: var(--color-secondary);
     position: relative;
-    left: 2.424rem;
+    left: 1.424rem;
     top: 6rem;
     z-index: 1;
 }
@@ -92,7 +92,7 @@
     color: var(--white-primary);
     position: absolute;
     top: 67%;
-    left: 50%;
+    left: 46.66%;
     width: 70%;
     padding: 2.424rem;
 }
